--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@ section:nth-of-type(3) {
 section:nth-of-type(3) div:nth-of-type(1) {
 	min-width: 600px;
 	height: auto;
-	background-image: url(images/portrait2.jpg);
+	background-image: url(images/portrait2.png);
 	background-position: center;
 	background-size: cover;
 	display:flex;
