--- a/style.css
+++ b/style.css
@@ -3,6 +3,17 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+@font-face {
+	src: url('../fonts/Ephesis-Regular.ttf');
+	src: url('../fonts/Oranienbaum-Regular.ttf');
+	src: url('../fonts/AlumniSans-VariableFont_wght.ttf');
+	src: url('../fonts/Ubuntu-Regular.ttf');
+	src: url('../fonts/Ubuntu-Bold.ttf');
+	font-family: 'Alumni Sans', serif;
+	font-family: 'Ephesis', serif;
+	font-family: 'Oranienbaum', serif;
+	font-family: 'Ubuntu', serif;
+}
 a,button {
 	all:unset;
 }
