--- a/style.css
+++ b/style.css
@@ -195,11 +195,11 @@ section:nth-of-type(2) span {
 	font-weight: 400;
 }
 section:nth-of-type(2) li div {
-	font-size: 21px;
+	font-size: 19px;
 	text-align: justify;
 	width: 300px;
 	height: auto;
-	margin-bottom: 30px;
+	/* margin-bottom: 30px; */
 }
 section:nth-of-type(3) {
 	/* background-color: #f1f1f1; */
@@ -219,7 +219,7 @@ section:nth-of-type(3) div:nth-of-type(2) {
 	width: 1120px;
 	text-align: justify;
 	font-size: 19px;
-	margin: 30px 57px 22px 30px
+	margin: 30px;
 }
 section:nth-of-type(3) a {
 	font-weight: 500;
@@ -491,4 +491,24 @@ footer a:hover {
 	flex: 1 1 auto;
 	padding: 15px;
 	overflow: auto;
+}
+@media (min-width: 1450px) {
+	section:nth-of-type(2) li div {
+		width: 400px;
+	}
+	section:nth-of-type(3) {
+		justify-content: flex-start;
+	}
+	section:nth-of-type(3) div:nth-of-type(2) {
+		width: 75.69vw;
+	}
+	main {
+		grid-template: 425px 491px 640px 865px 760px 400px 161px/auto;
+	}
+}
+
+@media (min-width: 1635px) {
+	section:nth-of-type(3) div:nth-of-type(2) {
+		width: 64.69vw;
+	}
 }
