--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ header {
 }
 main {
 	display: grid;
-	grid-template: 425px 531px 790px 865px 760px 400px 161px/minmax(1400px, auto);
+	grid-template: 425px 531px 735px 865px 760px 400px 161px/minmax(1400px, auto);
 	font-family: 'Ubuntu', sans-serif;
 	font-weight: 400;
 	margin: 0px auto;
@@ -139,10 +139,6 @@ nav ul, section:nth-of-type(2) ul {
 .language a:hover {
 	color: #49cbcd;
 }
-section:nth-of-type(2) ul {
-	justify-content: space-evenly;
-	width: 100%;
-}
 nav ul {
 	text-transform: uppercase;
 	font-family: 'Oranienbaum', serif;
@@ -172,11 +168,18 @@ section:nth-of-type(1) {
 .about li {
 	margin: 0px 30px;
 }
+section:nth-of-type(2) ul {
+	justify-content: center;
+	max-width: 100%;
+}
+
+.problems {
+	display: flex;
+	flex-flow: column wrap;
+}
 section:nth-of-type(2) {
 	display: flex;
-	flex-direction: column;
-	align-content: center;
-	flex-wrap: wrap;
+	justify-content: center;
 }
 section:nth-of-type(2) img {
 height: 94px;
@@ -203,25 +206,28 @@ section:nth-of-type(2) li div {
 	height: auto;
 	/* margin-bottom: 30px; */
 }
-section:nth-of-type(3) {
+.greeting {
 	/* background-color: #f1f1f1; */
 	display: flex;
-	justify-content: space-between;
+	justify-content: flex-start;
 	background-image: linear-gradient(90deg, rgb(189, 224, 228) 50%, rgba(224,218,230,0.8) 80%);
 }
-section:nth-of-type(3) div:nth-of-type(1) {
-	min-width: 600px;
+.photo-profile {
+	min-width: 500px;
 	height: auto;
 	background-image: url(images/portrait2.jpg);
 	background-position: center;
 	background-size: cover;
 	display:flex;
 }
-section:nth-of-type(3) div:nth-of-type(2) {
-	width: 1120px;
+.greeting-text {
+	min-width: 700px;
 	text-align: justify;
 	font-size: 19px;
 	margin: 30px;
+	display: flex;
+	flex-direction: column;
+	flex: auto;
 }
 section:nth-of-type(3) a {
 	font-weight: 500;
@@ -493,24 +499,4 @@ footer a:hover {
 	flex: 1 1 auto;
 	padding: 15px;
 	overflow: auto;
-}
-@media (min-width: 1450px) {
-	section:nth-of-type(2) li div {
-		width: 400px;
-	}
-	section:nth-of-type(3) {
-		justify-content: flex-start;
-	}
-	section:nth-of-type(3) div:nth-of-type(2) {
-		width: 75.69vw;
-	}
-	main {
-		grid-template: 425px 491px 640px 865px 760px 400px 161px/auto;
-	}
-}
-
-@media (min-width: 1635px) {
-	section:nth-of-type(3) div:nth-of-type(2) {
-		width: 64.69vw;
-	}
 }
