--- a/style.css
+++ b/style.css
@@ -174,37 +174,33 @@ section:nth-of-type(2) ul {
 }
 
 .problems {
-	display: flex;
-	flex-flow: column wrap;
+	display: grid;
+	grid-template: 100%/minmax(200px, auto) minmax(200px, auto) minmax(200px, auto) minmax(200px, auto);
+	place-content: center/space-evenly;
+	place-items: center;
 }
-section:nth-of-type(2) {
-	display: flex;
-	justify-content: center;
-}
-section:nth-of-type(2) img {
+.problems img {
 height: 94px;
 width: 94px;
 margin-bottom: 10px;
 }
-section:nth-of-type(2) li {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	text-align: center;
-	margin: 20px 20px;
-}
-section:nth-of-type(2) span {
+.problems h5 {
 	padding-bottom: 10px;	
 	font-family: 'Oranienbaum', serif;
 	font-size: 25px;
 	font-weight: 400;
+	text-align: center;
 }
-section:nth-of-type(2) li div {
+.problems div {
 	font-size: 19px;
 	text-align: justify;
 	width: 300px;
 	height: auto;
 	/* margin-bottom: 30px; */
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin: 20px 20px;
 }
 .greeting {
 	/* background-color: #f1f1f1; */
