--- a/style.css
+++ b/style.css
@@ -232,6 +232,9 @@ margin-bottom: 10px;
 	flex-direction: column;
 	flex: auto;
 }
+.greeting-text p {
+	margin-bottom: 20px;
+}
 section:nth-of-type(3) a {
 	font-weight: 500;
 }
