--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ header {
 }
 main {
 	display: grid;
-	grid-template: 425px 505px 760px 865px 760px 400px 161px/minmax(1440px, auto);
+	grid-template: 425px 505px 675px 865px 760px 400px 161px/minmax(1440px, auto);
 	font-family: 'Ubuntu', sans-serif;
 	font-weight: 400;
 	margin: 0px auto;
@@ -231,12 +231,13 @@ margin-bottom: 10px;
 	display: flex;
 	flex-direction: column;
 	flex: auto;
+	justify-content: center;
 }
 .greeting-text p {
 	margin-bottom: 20px;
 }
 .greeting-text a:hover {
-	font-weight: 600;	
+	font-weight: 600;
 }
 section:nth-of-type(3) a {
 	font-weight: 500;
@@ -246,6 +247,7 @@ h6 {
 	font-size: 48px;
 	font-weight: 500;
 	text-align: center;
+	margin-bottom: 20px;
 }
 section:nth-of-type(5) {
 	background-image: url(images/4853433.jpg), url(images/4853433-1.jpg);
@@ -509,8 +511,8 @@ footer a:hover {
 	padding: 15px;
 	overflow: auto;
 }
-@media (min-width: 1700px) {
+@media (min-width: 1600px) {
 	main {
-		grid-template: 425px 470px 630px 865px 760px 400px 161px/minmax(1440px, auto);
+		grid-template: 425px 470px 600px 865px 760px 400px 161px/minmax(1440px, auto);
 	}
 }
